WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255818
Fix compilation of DFANode
https://bugs.webkit.org/show_bug.cgi?id=255818
Summary
Fix compilation of DFANode
Don Olmstead
Reported
2023-04-21 17:39:23 PDT
Our clang is not liking the `const uint8_t IsKilled`.
Attachments
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2023-04-21 17:42:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13058
EWS
Comment 2
2023-04-21 22:51:16 PDT
Committed
263276@main
(1e12a811a71b): <
https://commits.webkit.org/263276@main
> Reviewed commits have been landed. Closing PR #13058 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-21 22:52:20 PDT
<
rdar://problem/108398124
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug