Cherry-pick 263276@main (1e12a811a71b). https://bugs.webkit.org/show_bug.cgi?id=255818

Fix compilation of DFANode
    https://bugs.webkit.org/show_bug.cgi?id=255818

    Reviewed by Yusuke Suzuki.

    Declare `IsKilled` statically to prevent a compilation error.

    * Source/WebCore/contentextensions/DFANode.h:

    Canonical link: https://commits.webkit.org/263276@main