Source/WebCore/contentextensions/DFANode.h
@@ -163,7 +163,7 @@ private:
     uint8_t m_transitionsLength { 0 };
     
     uint8_t m_flags { 0 };
-    const uint8_t IsKilled = 0x01;
+    static constexpr uint8_t IsKilled = 0x01;
 };
 
 static_assert(sizeof(DFANode) <= 16, "Keep the DFANodes small");
